# RAG-graphRAG_example

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build_data.py  build_graph.py  build_lightrag.py  docker-compose.yml  env.example  export_vectors.py  pyproject.toml
chunk_web/: app.js  chunkers.js  example.txt  index.html  style.css
data/: graph.json  points.json  qdrant_seed.json
docs/: local-mode-design.md
embed_web/: app.js  index.html  style.css
graph_viz/: __init__.py  client.py  config.py  transform.py
graph_web/: app.js  index.html  style.css
lightrag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json
pipeline_web/: app.js  index.html  style.css
qdrant_viz/: __init__.py  config.py  data.py  embedding.py  mistral.py  placement.py  seed.py
tests/: conftest.py  test_app.py  test_config.py  test_data.py  test_embed_app.py  test_embed_texts.py  test_embedding.py  test_graph_app.py  test_graph_build.py  test_graph_client.py  test_graph_config.py  test_graph_transform.py  test_local_mode.py  test_mistral.py  test_pipeline_api.py  test_placement.py
tests/fixtures/: points.json
web/: app.js  index.html  style.css
