[project]
name = "qdrant-viz"
version = "0.1.0"
description = "3D visualization of Qdrant embeddings for a presentation"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9",
    "mistralai>=1.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "umap-learn>=0.5.5",
    "plotly>=5.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
